--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.29.1",
     "stylelint": "16.6.1",
-    "stylelint-config-standard": "36.0.0"
+    "stylelint-config-standard": "36.0.0",
+    "wrangler": "^3.101.0"
   }
 }
