--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@ main = "./cloudflare/worker.js"
 compatibility_date = "2024-12-18"
 
 [vars]
-ENVIRONMENT = "sandbox"
+ENVIRONMENT = "production"
 
 [observability]
 enabled = true
